--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -704,9 +704,9 @@ a.find-us-address:hover {
 
   .find-us-map {
     width: 100%;
-    flex: none;
-    height: 60vh;
-    min-height: 280px;
+    flex: 1;
+    min-height: 240px;
+    height: auto;
   }
 
   .hours-row {
